--- a/code/spring-cloud-netflix/common-dependencies/pom.xml
+++ b/code/spring-cloud-netflix/common-dependencies/pom.xml
@@ -91,13 +91,13 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <archive>
-                                <manifest>
-                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                                    <addClasspath>true</addClasspath>
-                                </manifest>
-                            </archive>
+                            <!--<archive>-->
+                                <!--<manifest>-->
+                                    <!--<addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
+                                    <!--<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
+                                    <!--<addClasspath>true</addClasspath>-->
+                                <!--</manifest>-->
+                            <!--</archive>-->
                         </configuration>
                     </execution>
                 </executions>
